Code for Java 9 demo