@@ -1,7 +1,5 @@
 package com.mechanitis.demo.sense.twitter.connector;
 
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
 import java.io.IOException;
@@ -9,6 +7,7 @@ import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 import java.util.Map;
 import java.util.Properties;
 import java.util.Random;
@@ -19,7 +18,7 @@ public class TwitterOAuth {
     private static final String HMAC_SHA1 = "HMAC-SHA1";
     private long nonce;
     private long timestampInSeconds;
-    private long _ = 0L;
+    private long _some = 0L;
 
     //from properties file
     private String accessTokenSecret;
@@ -110,7 +109,7 @@ public class TwitterOAuth {
             SecretKeySpec spec = new SecretKeySpec(oauthSignature.getBytes(), HMAC_SHA1);
             mac.init(spec);
             byteHMAC = mac.doFinal(getBaseString().getBytes());
-            return encode(new BASE64Encoder().encode(byteHMAC), "UTF-8");
+            return encode(Base64.getEncoder().encodeToString(byteHMAC), "UTF-8");
         } catch (InvalidKeyException | NoSuchAlgorithmException | UnsupportedEncodingException e) {
             throw new RuntimeException("Failed to authenticate against Twitter", e);
         }
